Change in Login Page

--- a/templates/manage.html
+++ b/templates/manage.html
@@ -29,11 +29,11 @@
                     <li class="nav-item">
                         {% if session.admin_id %}
                             <a class="nav-link" href="{{ url_for('admin_logout') }}">
-                                <i class="bi bi-box-arrow-right"></i> Logout ({{ session.admin_username }})
+                                <i class="bi bi-person-circle"></i> {{ session.admin_username }} <i class="bi bi-box-arrow-right"></i>
                             </a>
                         {% else %}
                             <a class="nav-link" href="{{ url_for('admin_login') }}">
-                                <i class="bi bi-person-circle"></i> Admin
+                                <i class="bi bi-person-circle"></i> Admin Login
                             </a>
                         {% endif %}
                     </li>
